--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
-Pillow>=10.0.0
-requests>=2.20.0
-opencv-python>=4.2.0.32
-tqdm>=4.23.0
-diffimg==0.2.3
 arabic-reshaper==2.1.3
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
+diffimg==0.2.3
+Faker==37.0.0
+future==1.0.0
+idna==3.10
+numpy==2.2.3
+opencv-python==4.11.0.86
+pandas==2.2.3
+pillow==11.1.0
 python-bidi==0.4.2
-wikipedia>=1.4.0
+python-dateutil==2.9.0.post0
+pytz==2025.1
+requests==2.32.3
+six==1.17.0
+soupsieve==2.6
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+wikipedia==1.4.0
